src/objects/Receive_Auth_Key_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authentication_Key__c</fullName>
        <label>Easy Rest Authentication Key</label>
        <referenceTo>Authentication_Key__c</referenceTo>
        <relationshipLabel>Easy Rest Receive Auth Key Junctions</relationshipLabel>
        <relationshipName>Easy_Rest_Receive_Auth_Key_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Can_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Configuration__c</fullName>
        <label>Easy Rest Receive Configuration</label>
        <referenceTo>Receive_Configuration__c</referenceTo>
        <relationshipLabel>Easy Rest Receive Auth Key Junctions</relationshipLabel>
        <relationshipName>Easy_Rest_Receive_Auth_Key_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Easy Rest Receive Auth Key Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Easy Rest Receive Auth Key Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Easy Rest Receive Auth Key Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>